Fixed issue with inviting classmates on mobile ui

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -5401,6 +5401,12 @@ a.github-fork {
 		}
 	}
 
+	.group-list {
+		height: 150px;
+    overflow: hidden;
+    overflow-y: scroll;
+	}
+
 	.messages-box {
 		margin-top: 0px;
 		height: calc(~"100% -" 90px);
